--- a/Relazione/projectreport.sty
+++ b/Relazione/projectreport.sty
@@ -23,7 +23,7 @@
 \usepackage{geometry} 
 \geometry{a4paper, margin=1in, twoside}
 \usepackage{setspace}
-\onehalfspacing
+
 
 % ------------------------------------------------------------------------------
 % Referencing
@@ -45,8 +45,8 @@
 \usepackage{xcolor}
 \lstdefinestyle{pythoncode}{
 	backgroundcolor=\color{gray!10},   
-	commentstyle=\color{green!50!black},
-	keywordstyle=\color{blue},
+	commentstyle=\color{blue!50!black},
+	keywordstyle=\color{green!50!black},
 	stringstyle=\color{magenta},
 	basicstyle=\linespread{1}\footnotesize\ttfamily,
 	numberstyle=\tiny,
@@ -55,7 +55,7 @@
 	captionpos=t,   
 	frame=single,
 	keepspaces=true,         
-	language=python,        
+	language=Python,        
 	numbers=none,             
 	numbersep=5pt,                  
 	showspaces=false,                
